--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.17",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@upstash/ratelimit": "^1.1.3",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "three": "^0.164.1"
   },
   "devDependencies": {
