--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.17",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@upstash/ratelimit": "^1.1.3",
     "@vercel/kv": "^1.0.1",
     "dotenv": "^16.4.5",
     "mongoose": "^8.3.4",
+    "mui-phone-number": "^3.0.3",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
