--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
