--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "20.12.11",
-    "@types/react": "18.3.2",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
